--- a/home/home.css
+++ b/home/home.css
@@ -2,69 +2,30 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url('../theweeknd/weeknd-desktop-v2.jpg');
-    color: black;
     text-align: center;
+    background-color: #f4f4f4;
 }
-
 header {
-    background: black;
+    background-color: #222;
+    color: white;
     padding: 15px;
 }
-
-nav ul{
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li a{
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a{
+nav a {
     color: white;
+    margin: 0 15px;
     text-decoration: none;
-    font-size: 15px;
 }
-
-.product {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 50px auto;
-    width: 80%;
-    background: #1e1e1e;
-    padding: 20px;
-    border-radius: 10px;
+.car {
+    margin: 20px auto;
+    padding: 10px;
 }
-
-.product img{
+.car img {
     width: 300px;
     height: auto;
-    margin-right: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(32, 4, 4, 0.5);
 }
-
-.product-info{
-    text-align: left;
-    max-width: 400px;
-}
-
-.button {
-    background: red;
-    color: white;
-    border: none;
-    padding: 10px 15px;
+button {
+    padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    border-radius: 5px;
 }
-
-button:haver {
-    background: darkred;
-
-} 
-
-
